make-a-wish-salesforce/src/objects/Wish_Interview_Form_Maps__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to reference Knowledge Articles or Drawloop DocGen Ids when creating custom links or flows relating to documents for Wish Interviews.</description>
    <fields>
        <fullName>Blank_Interview_Form_Knowledge_URL_Name__c</fullName>
        <inlineHelpText>When editing a knowledge article, you can specify a friendly URL name like &quot;Wish-Interview-Form&quot;</inlineHelpText>
        <label>Blank Interview Form Knowledge URL Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wish_Details_Form_Attach_Delivery_Id__c</fullName>
        <label>Wish Details Form Attach Delivery Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wish_Details_Form_DDP_Id__c</fullName>
        <label>Wish Details Form DDP Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wish_Details_Form_Download_Delivery_Id__c</fullName>
        <label>Wish Details Form Download Delivery Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wish_Vision_Form_Attach_Delivery_Id__c</fullName>
        <label>Wish Vision Form Attach Delivery Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wish_Vision_Form_DDP_Id__c</fullName>
        <label>Wish Vision Form DDP Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wish_Vision_Form_Download_Delivery_Id__c</fullName>
        <label>Wish Vision Form Download Delivery Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Wish Interview Form Maps</label>
</CustomObject>